# dc

./: .gitignore  Dockerfile  Main.hs
admin/: index.html
admin/css/: main.css
admin/js/: app.js  area-status.js  cluster-mesh.js  main.js  navbar.js  node-statistic.js  node-status.js  pages.js  registry.js  utils.js  validation.js
admin/js/area/: status.js
admin/js/cluster/: cluster-mesh.js  node-status.js  registry.js  start-service.js
admin/js/vendors/: bootstrap.min.js
admin/static/css/vendors/: bootstrap-theme.min.css
admin/templates/: base.tpl  node-statistic.tpl  registry.tpl
client/: controller.py  index.html  main.py  network.py  world.kv  world.py
client/css/: main.css  meter.css  ui.css  world.css
client/css/vendors/: bootstrap.min.css
client/js/: app.js  connection.js  controller.js  main.js  models.js  object-context-controller.js  performance-meter.js  settings.json  ui.js  utils.js  windows-controller.js  world-models.js  world-views.js  world.js
client/js/stage/: controller.js  models.js  signal-handler.js  views.js
client/js/stage/objects/: asteroid.js  control-point.js  gate.js  user.js
client/js/ui/: common.js  control-mode.js  object-context.js  ui.js
client/js/ui/windows/: common.js  messages.js  worldmap.js
client/js/vendors/: require-json.min.js
client/js/world/: models.js  views.js  world.js
client_settings/: dev.json
environment/: Dockerfile  Dockerfile.scripts  Dockerfile.server  Vagrantfile  bootsrap  bootstrap  docker-compose-dev-cluster.yaml  py_requirements.txt
func_tests/: test_base.py  test_enter_area.py  test_tools.py  tools.py
kivy_client/: controller.py  game.kv  main.py  mediator.py  utils.py  world.py
python_modules/: generate_area_objects.py  ws_client.py
scripts/: build_container  build_dev_container  build_server_container  compile  container  container_run_dev_server  create_db  dev_cluster  generate_area_objects  recreate_dev_db  run_dev_cluster  run_dev_container  run_dev_server  run_func_tests  server_container
server/: Area.hs  Connection.hs  Controller.hs  Main.hs  Settings.hs  Types.hs  Utils.hs  dc.cabal  settings.yaml
server/Area/: Action.hs  Area.hs  State.hs  Tick.hs  User.hs  Utils.hs
server/settings/: dev.yaml  dev_admin.yaml  dev_cluster.yaml  test.yaml
server/src/: Area.hs  Broadcaster.hs  ClientCommands.hs  Connection.hs  Controller.hs  DB.hs  Debug.hs  GlobalRegistry.hs  HTTPServer.hs  Main.hs  Service.hs  Settings.hs  Types.hs  User.hs  Utils.hs
server/src/Admin/: API.hs  Admin.hs  AreaHandlers.hs  ClusterHandlers.hs  Common.hs  Settings.hs  UI.hs  Utils.hs
server/src/App/: ClientCommands.hs  Connection.hs  Controller.hs  DB.hs  Debug.hs  GlobalRegistry.hs  HTTPServer.hs  Settings.hs  Types.hs  Utils.hs
server/src/App/Area/: Action.hs  Area.hs  ClientCommands.hs  External.hs  Signal.hs  State.hs  Tick.hs  Types.hs  User.hs  Utils.hs  Vector.hs
server/src/App/User/: External.hs  Types.hs  User.hs
server/src/Area/: Action.hs  Area.hs  ClientCommands.hs  Collision.hs  Event.hs  External.hs  Grid.hs  Misc.hs  Settings.hs  Signal.hs  State.hs  Tick.hs  Types.hs  User.hs  Utils.hs  Vector.hs
server/src/Area/Logic/: Action.hs  ClientCommands.hs  Collision.hs  Grid.hs  Misc.hs  Signal.hs  Tick.hs  Vector.hs
server/src/Area/Objects/: Asteroid.hs  ControlPoint.hs  Gate.hs  User.hs
server/src/Base/: Broadcaster.hs  GlobalCache.hs  GlobalRegistry.hs  Logger.hs
server/src/DB/: AreaDB.hs  DB.hs  Settings.hs  Types.hs  UserDB.hs  Utils.hs
server/src/HTTP/: HTTP.hs  Settings.hs
server/src/LogAggregator/: LogAggregator.hs
server/src/NodeAgent/: NodeAgent.hs
server/src/NodeControl/: NodeControl.hs
server/src/User/: Auth.hs  ClientCommands.hs  External.hs  Settings.hs  State.hs  Types.hs  User.hs  UserArea.hs
server/src/WS/: ClientCommands.hs  Connection.hs  WS.hs
server/tests/func/: settings.yaml  test_base.py  test_basic_interaction.py  test_enter_area.py  tools.py
