Name: DC
Version: 0.0.1
Cabal-Version: >= 1.8
License: BSD3
Author: Vlad Lopalo
Synopsis: DC
Build-Type: Simple
Tested-With: GHC == 7.8.4


Executable dc
    Main-Is: Main.hs
    GHC-Options:
        -02
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -Wall --enable warnings
    Build-Depends:
        SHA == 1.6.4,
        random >= 1.0.0.0,
        hashable >= 1.0.0,
        aeson == 0.7.0.6,
        base == 4.7.0.2,
        time == 1.4.2,
        mtl == 2.1.2,
        text >= 0.11.0.0,
        bytestring == 0.10.4.0,
        ghc-prim == 0.3.1.0,
        data-lens == 2.10.5,
        binary == 0.7.1.0,
        MissingH == 1.2.1.0,
        network == 2.6.0.2,
        io-streams == 1.3.2.0,
        distributed-process == 0.5.4,
        distributed-process-extras == 0.1.1,
        distributed-static == 0.3.1.0,
        network-transport == 0.4.1.0,
        network-transport-tcp == 0.4.1,
        utf8-string == 0.3.7,
        websockets == 0.9.5.0,
        containers == 0.5.5.1,
        yaml == 0.8.14,
        direct-sqlite == 2.3.14,
        sqlite-simple == 0.4.8.0,
        scotty == 0.10.2,
        wai-middleware-static == 0.7.0.1
    Hs-Source-Dirs: src
    Other-Modules:
        Settings,
        Connection,
        ClientCommands,
        Types,
        Utils,
        Area.Area,
        Area.Action,
        Area.Event,
        Area.State,
        Area.Tick,
        Area.Types,
        Area.User,
        Area.Utils


