Name: DC
Version: 0.0.1
Cabal-Version: >= 1.8
License: BSD3
Author: Vlad Lopalo
Synopsis: DC
Build-Type: Simple
Tested-With: GHC == 7.10.3


Executable dc
    Main-Is: Main.hs
    GHC-Options:
        -O2
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -Wall --enable warnings
        -fno-warn-unused-do-bind
    Build-Depends:
        base,
        mtl,
        SHA == 1.6.4,
        random >= 1.0.0.0,
        hashable >= 1.0.0,
        aeson == 0.11.*,
        time >= 1.5,
        exceptions,
        text == 1.*,
        digest == 0.0.1.2,
        bytestring == 0.10.6.0,
        bytestring-trie >= 0.2.4,
        data-lens == 2.10.5,
        binary,
        directory <= 1.2.5.1,
        MissingH == 1.2.1.0,
        network == 2.6.*,
        distributed-process == 0.6.1,
        distributed-process-extras == 0.2.1.2,
        distributed-static == 0.3.4.0,
        network-transport == 0.4.3.*,
        network-transport-tcp == 0.5.*,
        utf8-string == 0.3.*,
        websockets == 0.9.5.0,
        containers == 0.5.*,
        yaml == 0.8.*,
        leveldb-haskell == 0.6.3,
        scotty == 0.11.*,
        wai-middleware-static == 0.8.*,
        warp >= 3.1.0
    Hs-Source-Dirs: src
    Other-Modules:
        Settings,
        Connection,
        ClientCommands,
        Types,
        Utils,
        Area.Area,
        Area.Action,
        Area.State,
        Area.Tick,
        Area.Types,
        Area.User,
        Area.Utils


